--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,8 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
 
 // Typography Styles
 h1, h2, h3 {
@@ -50,5 +52,4 @@ h1, h2, h3 {
   margin-top: -20px;
   padding-top: 50px;
   padding-bottom: 100px;
-  
 }
