--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,9 +27,9 @@ h1, h2, h3 {
 // Background Gradient
 .navbar, .home-callout {
   //Gradient provided by @_ighosh at uiGradients.com
-  background: #C33764;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #B2FEFA;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #0ED2F7, #B2FEFA);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #0ED2F7, #B2FEFA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 // Nav Styles
@@ -50,6 +50,18 @@ h1, h2, h3 {
     opacity: 0.75;
   }
 }
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+  
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+      background-color:#0ED2F7;
+  }
+}
+
 
 // Homepage Styles
 .home-callout {
